# pacman-kata

./: .gitignore  Cargo.toml
src/main/rust/: board.rs  board_token.rs  game.rs  lib.rs  parse_error.rs  position.rs  render.rs  stats.rs
src/main/rust/game/: board.rs  mod.rs  stats.rs
src/main/rust/tokens/: ghost.rs  misc.rs  mod.rs  pacman.rs  pill.rs  wall.rs
src/test/rust/: main.rs  pacman_step_def.rs  parsing_features.rs  rendering_features.rs
